.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_conciseBody.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_conciseBody.ts(11,63): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)


==== /.src/missingEffectContext_conciseBody.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    declare const effectWithServices: Effect.Effect<number, never, ServiceA>
    
    // @ts-expect-error
    export const conciseBody: () => Effect.Effect<number> = () => effectWithServices
                                                                  ~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)
    
